# revanced-static-api

./: .gitignore  CNAME  README.md  config.example.json  connections.json  donations.json  main.py  mypy.ini  pyproject.toml  requirements.txt  team.json
.github/workflows/: black.yml  update.yml
app/: api.py  config.py  dependencies.py  generator.py  utils.py
commands/: announcement.py  generate.py
contributors/: revanced-integrations.json  revanced-manager.json  revanced-patches.json
releases/: revanced-integrations.json  revanced-manager.json  revanced-patches.json
releases/revanced-integrations/: latest.json
releases/revanced-manager/: v1.14.2.json
releases/revanced-patches/: latest.json
src/app/: api.py  generator.py  utils.py
