[tool.poetry]
name = "revanced-static-api"
version = "0.1.0"
description = "Static API for ReVanced"
authors = ["Alexandre Teles <alexandre.teles@ufba.br>", "oSumAtrIX <johan.melkonyan1@web.de>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dependency-injector = "^4.41.0"
aiohttp = "^3.8.6"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
